add capabilities flag, pre mcp